--- a/index.html
+++ b/index.html
@@ -47,14 +47,15 @@
         <hr />
         <h4>C/C++</h4>
         <hr />
-      </div></div>
+      </div>
+    </div>
     <div id="headerContainer" class="parts">
       <img src="./stuffs/Ek0QSuNWAAICxpX (1).jpg" alt="header" id="header" />
       <img
         src="./stuffs/good-nature-homepage-hero_2-scaled.jpg"
         alt="Avatar"
         id="Avatar"
-        />
+      />
       <div id="headerText" style="padding-top: 25px">
         <h1>Mohammad Movahedinia</h1>
         <p>React Developer | Graduated in CE at Shahid Beheshti university</p>
@@ -76,31 +77,65 @@
     </div>
     <div class="parts">
       <h3>Experience</h3>
-      <h4>Full-stack Developer</h4>
-      <h5>Romak System . Intern</h5>
-      <p>Jun 2021 ‑ Nov 2021. 5 mos</p>
-      <p>Amol, Iran</p>
+      <div style="display: flex">
+        <img src="./stuffs/romak.png" alt="romak logo" class="logos" />
+        <div>
+          <h4>Full-stack Developer</h4>
+          <h5>Romak System . Intern</h5>
+          <p>Jun 2021 ‑ Nov 2021. 5 mos</p>
+          <p>Amol, Iran</p>
+        </div>
+      </div>
       <hr />
-      <h4>Developer</h4>
-      <h5>Ministry of Economy . Intern</h5>
-      <p>Oct 2018 ‑ Apr 2019. 8 mos</p>
-      <p>Tehran, Iran</p>
+      <div style="display: flex">
+        <img src="./stuffs/9nnamed.jpg" alt="g4b logo" class="logos" />
+        <div>
+          <h4>Developer</h4>
+          <h5>Ministry of Economy . Intern</h5>
+          <p>Oct 2018 ‑ Apr 2019. 8 mos</p>
+          <p>Tehran, Iran</p>
+        </div>
+      </div>
     </div>
     <div class="parts">
       <h3>Education</h3>
-      <h4>Tehran University</h4>
-      <h5>Master of Science, MS, Public Policy</h5>
-      <p>Sep 2022</p>
+      <div style="display: flex">
+        <img
+          src="./stuffs/University_of_Tehran_logo.svg.png"
+          alt=""
+          class="logos"
+        />
+        <div>
+          <h4>Tehran University</h4>
+          <h5>Master of Science, MS, Public Policy</h5>
+          <p>Sep 2022</p>
+        </div>
+      </div>
       <hr />
-      <h4>Shahid Beheshti University</h4>
-      <h5>Bachelor's degree, Computer Engineering</h5>
-      <p>Oct 2018 ‑ Jan 2022</p>
+      <div style="display: flex">
+        <img
+          src="./stuffs/280_67ebd4f8438ff2923e24e1842115d0f8_thumb.jpg"
+          alt=""
+          class="logos"
+        />
+        <div>
+          <h4>Shahid Beheshti University</h4>
+          <h5>Bachelor's degree, Computer Engineering</h5>
+          <p>Oct 2018 ‑ Jan 2022</p>
+        </div>
+      </div>
       <hr />
-      <h4>
-        National Organization for Development of Exceptional Talents (Sampad)
-      </h4>
-      <h5>High School Diploma</h5>
-      <p>Oct 2014 ‑ Aug 2018</p>
+      <div style="display: flex">
+        <img src="./stuffs/download.png" alt="" class="logos" />
+        <div>
+          <h4>
+            National Organization for Development of Exceptional Talents
+            (Sampad)
+          </h4>
+          <h5>High School Diploma</h5>
+          <p>Oct 2014 ‑ Aug 2018</p>
+        </div>
+      </div>
     </div>
     <div class="parts">
       <h3>Skills</h3>
@@ -112,7 +147,9 @@
       <hr />
       <h4>Git</h4>
       <hr />
-      <div onclick="moreSkills()" style="text-align: center; cursor: pointer;">More Skills -></div>
+      <div onclick="moreSkills()" style="text-align: center; cursor: pointer">
+        More Skills ->
+      </div>
     </div>
     <div class="parts">
       <h3>Volunteering</h3>
@@ -139,8 +176,12 @@
     </div>
     <div class="parts">
       <h3>Interests</h3>
-      <h4>Academy hamrah</h4>
-      <h5>Professional working proficiency</h5>
+      <div style="display: flex">
+        <img src="./stuffs/logo-1-1-2.png" alt="" class="logos" />
+        <div>
+          <h4>Academy hamrah</h4>
+        </div>
+      </div>
     </div>
   </body>
 </html>
